[versioneer]
VCS = git
style = pep440
versionfile_source = scout2csv/_version.py
versionfile_build = scout2csv/_version.py
tag_prefix =
parentdir_prefix = scout2csv-

[flake8]
ignore =
       # E501: lines too long
       E501,
       # W391: blank lines at end of file
       W391

[metadata]
description-file = README.md